fixed nav spacing issue

--- a/less/style.less
+++ b/less/style.less
@@ -8,12 +8,14 @@ body{
 
 #site-navigation{
   position: relative;
-  margin-top:0;
+  margin: 0;
+  padding: 0;
   height: 60px;
 
   @media screen and (max-width: 510px) {
     position: static;
-    margin-top: 0;
+    margin: 0;
+    padding: 0;
     height: 90px;
   }
 
@@ -61,7 +63,7 @@ body{
       position: static;
       text-align: center;
       display: block;
-      padding-right: 0;
+      padding-right: 15px;
     }
     ul{
       right: 0;
